fix(front-end): fix link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
         <div class="navbar navbar-dark bg-dark shadow-sm">
             <div class="container">
-                <a href="#" class="navbar-brand d-flex align-items-center">
+                <a href="./index.html" class="navbar-brand d-flex align-items-center">
                     <i class="fas fa-camera-retro"></i>
                     <strong class="header-title">OniCamera</strong>
                 </a>
