fix(front-end): fix defer script

--- a/product.html
+++ b/product.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="./css/style.css">
 
-    <script src="./js/product.js"></script>
+    <script src="./js/product.js" defer></script>
 </head>
 
 <body>
