--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="./css/style.css">
 
-    <script src="./js/home.js"></script>
+    <script src="./js/home.js" defer></script>
 </head>
 
 <body>
