--- a/order.html
+++ b/order.html
@@ -15,7 +15,7 @@
         integrity="sha512-6KY5s6UI5J7SVYuZB4S/CZMyPylqyyNZco376NM2Z8Sb8OxEdp02e1jkKk/wZxIEmjQ6DRCEBhni+gpr9c4tvA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <script src="./js/order.js"></script>
+    <script src="./js/order.js" defer></script>
 
     <link rel="stylesheet" href="./css/style.css">
 
