fix(front-end): rename variable && change onclick

--- a/product.html
+++ b/product.html
@@ -44,9 +44,7 @@
                 <h1 id="product-name"></h1>
                 <span id="description"></span>
                 <span id="price"></span>
-                <select id="lenses">
-                    <option value="test">tes</option>
-                </select>
+                <select id="lenses"></select>
                 <button id="add-to-basket">Ajouter au panier</button>
             </div>
         </section>
