fix(front-end): rename variable && fix little error

--- a/panier.html
+++ b/panier.html
@@ -37,7 +37,6 @@
 </head>
 
 <body class="bg-light">
-
     <header>
         <div class="navbar navbar-dark bg-dark shadow-sm">
             <div class="container">
@@ -69,7 +68,7 @@
                     </h4>
                     <ul id="basket" class="list-group mb-3">
                         <li class="list-group-item d-flex justify-content-between">
-                            <span>Total (USD)</span>
+                            <span>Total (EUR)</span>
                             <strong id="total_price">$20</strong>
                         </li>
                     </ul>
