--- a/panier.html
+++ b/panier.html
@@ -69,7 +69,7 @@
                     <ul id="basket" class="list-group mb-3">
                         <li class="list-group-item d-flex justify-content-between">
                             <span>Total (EUR)</span>
-                            <strong id="total_price">$20</strong>
+                            <strong id="total_price"></strong>
                         </li>
                     </ul>
                 </div>
