fix(front-end): bad regex

--- a/panier.html
+++ b/panier.html
@@ -79,12 +79,12 @@
                         <div class="row g-3">
                             <div class="col-sm-6">
                                 <label for="firstName" class="form-label">Prénom</label>
-                                <input type="text" class="form-control" id="firstName" placeholder="" value="" pattern="[A-z]" required>
+                                <input type="text" class="form-control" id="firstName" placeholder="" value="" pattern="[A-z]+" required>
                             </div>
 
                             <div class="col-sm-6">
                                 <label for="lastName" class="form-label">Nom de famille</label>
-                                <input type="text" class="form-control" id="lastName" placeholder="" value="" pattern="[A-z]" required>
+                                <input type="text" class="form-control" id="lastName" placeholder="" value="" pattern="[A-z]+" required>
                             </div>
 
                             <div class="col-12">
@@ -101,7 +101,7 @@
 
                             <div class="col-12">
                                 <label for="city" class="form-label">Ville</label>
-                                <input type="text" class="form-control" id="city" placeholder="Paris" pattern="[A-z]" required>
+                                <input type="text" class="form-control" id="city" placeholder="Paris" pattern="[A-z]+" required>
                             </div>
                         </div>
                         <hr class="my-4">
